--- a/resources/sass/vuesax/components/vxSidebar.scss
+++ b/resources/sass/vuesax/components/vxSidebar.scss
@@ -45,7 +45,7 @@
     width: 100%;
     .logo{
       img {
-        padding: 4px 0;
+        padding: 0;
       }
       .logo-text{
         font-size: 22px;
