--- a/public/css/app.css
+++ b/public/css/app.css
@@ -119,6 +119,7 @@ textarea.vs-textarea {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  -webkit-transition: opacity .7s;
   transition: opacity .7s;
   z-index: -1;
 }
@@ -129,8 +130,10 @@ textarea.vs-textarea {
 }
 
 .the-footer {
+  display: -webkit-box;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
 }
 
 li.vs-navbar--item a {
@@ -157,10 +160,13 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 }
 
 .demo-alignment {
+  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
+  -webkit-box-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+          align-items: center;
 }
 
 .demo-alignment > * {
@@ -260,6 +266,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
   width: calc(100% - 260px - 4.4rem);
   position: fixed;
   border-radius: .5rem;
+  -webkit-transition: all .5s;
   transition: all .5s;
   z-index: 10000;
 }
@@ -275,6 +282,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 #content-area {
   margin-left: 260px;
   height: 100%;
+  -webkit-transition: margin-left 0.5s;
   transition: margin-left 0.5s;
 }
 
@@ -350,6 +358,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 =========================================================*/
 
 .vx-navbar-wrapper {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(44%, rgba(248, 248, 248, 0.95)), color-stop(73%, rgba(248, 248, 248, 0.46)), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(to bottom, rgba(248, 248, 248, 0.95) 44%, rgba(248, 248, 248, 0.46) 73%, rgba(255, 255, 255, 0) 100%);
   padding: 2.2rem;
   padding-top: 1.3rem;
@@ -383,6 +392,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 }
 
 .show-overlay .vx-navbar-wrapper {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(44%, rgba(44, 48, 60, 0.9)), color-stop(73%, rgba(44, 48, 60, 0.43)), to(rgba(44, 48, 60, 0)));
   background: linear-gradient(to bottom, rgba(44, 48, 60, 0.9) 44%, rgba(44, 48, 60, 0.43) 73%, rgba(44, 48, 60, 0) 100%);
 }
 
@@ -469,6 +479,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 }
 
 .navbar-custom .vs-con-items {
+  display: -webkit-box !important;
   display: flex !important;
   width: 100%;
 }
@@ -518,8 +529,10 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
 }
 
 .i18n-dropdown .vs-dropdown--item-link {
+  display: -webkit-box;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
 }
 
 @media screen and (max-width: 364px) {
@@ -541,6 +554,7 @@ div[id$="demo"] .vx-card:not(:last-of-type) {
   max-width: 100%;
   max-height: 100%;
   width: auto;
+  -webkit-transition: .35s;
   transition: .35s;
 }
 
@@ -813,21 +827,25 @@ ol {
 
 @-webkit-keyframes spin {
   from {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
 
   to {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
 @keyframes spin {
   from {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
 
   to {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
@@ -974,21 +992,25 @@ ol {
 
 @-webkit-keyframes vSelectSpinner {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
 
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
 @keyframes vSelectSpinner {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
 
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
@@ -996,6 +1018,7 @@ ol {
 
 .vs__fade-enter-active,
 .vs__fade-leave-active {
+  -webkit-transition: opacity 0.15s cubic-bezier(1, 0.5, 0.8, 1);
   transition: opacity 0.15s cubic-bezier(1, 0.5, 0.8, 1);
 }
 
@@ -1066,6 +1089,7 @@ ol {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+  display: -webkit-box;
   display: flex;
   padding: 0 0 4px 0;
   background: none;
@@ -1075,17 +1099,21 @@ ol {
 }
 
 .vs__selected-options {
+  display: -webkit-box;
   display: flex;
   flex-basis: 100%;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+          flex-grow: 1;
   flex-wrap: wrap;
   padding: 0 2px;
   position: relative;
 }
 
 .vs__actions {
+  display: -webkit-box;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   padding: 4px 6px 0 3px;
 }
 
@@ -1107,13 +1135,19 @@ ol {
 
 .vs__open-indicator {
   fill: rgba(60, 60, 60, 0.5);
-  transform: scale(1);
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 150ms cubic-bezier(1, -0.115, 0.975, 0.855);
+  transition: -webkit-transform 150ms cubic-bezier(1, -0.115, 0.975, 0.855);
   transition: transform 150ms cubic-bezier(1, -0.115, 0.975, 0.855);
-  transition-timing-function: cubic-bezier(1, -0.115, 0.975, 0.855);
+  transition: transform 150ms cubic-bezier(1, -0.115, 0.975, 0.855), -webkit-transform 150ms cubic-bezier(1, -0.115, 0.975, 0.855);
+  -webkit-transition-timing-function: cubic-bezier(1, -0.115, 0.975, 0.855);
+          transition-timing-function: cubic-bezier(1, -0.115, 0.975, 0.855);
 }
 
 .vs--open .vs__open-indicator {
-  transform: rotate(180deg) scale(1);
+  -webkit-transform: rotate(180deg) scale(1);
+          transform: rotate(180deg) scale(1);
 }
 
 .vs--loading .vs__open-indicator {
@@ -1183,8 +1217,10 @@ ol {
 /* Selected Tags */
 
 .vs__selected {
+  display: -webkit-box;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   background-color: #f0f0f0;
   border: 1px solid rgba(60, 60, 60, 0.26);
   border-radius: 4px;
@@ -1195,6 +1231,7 @@ ol {
 }
 
 .vs__deselect {
+  display: -webkit-inline-box;
   display: inline-flex;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1250,7 +1287,8 @@ ol {
   box-shadow: none;
   width: 0;
   max-width: 100%;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+          flex-grow: 1;
 }
 
 .vs__search::-webkit-input-placeholder {
@@ -1301,9 +1339,11 @@ ol {
   border-right: 0.9em solid rgba(100, 100, 100, 0.1);
   border-bottom: 0.9em solid rgba(100, 100, 100, 0.1);
   border-left: 0.9em solid rgba(60, 60, 60, 0.45);
-  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
   -webkit-animation: vSelectSpinner 1.1s infinite linear;
           animation: vSelectSpinner 1.1s infinite linear;
+  -webkit-transition: opacity .1s;
   transition: opacity .1s;
 }
 
@@ -1890,6 +1930,7 @@ ol {
 }
 
 .theme-dark .vx-navbar-wrapper {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(44%, rgba(44, 48, 60, 0.9)), color-stop(73%, rgba(44, 48, 60, 0.43)), to(rgba(44, 48, 60, 0)));
   background: linear-gradient(to bottom, rgba(44, 48, 60, 0.9) 44%, rgba(44, 48, 60, 0.43) 73%, rgba(44, 48, 60, 0) 100%);
 }
 
@@ -1916,6 +1957,7 @@ ol {
 
 .theme-dark .main-menu-sidebar .shadow-bottom {
   width: 94%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(44%, #0f1642), color-stop(73%, rgba(15, 22, 66, 0.51)), to(rgba(44, 48, 60, 0)));
   background: linear-gradient(to bottom, #0f1642 44%, rgba(15, 22, 66, 0.51) 73%, rgba(44, 48, 60, 0) 100%);
 }
 
@@ -2876,6 +2918,7 @@ ol {
 
 .theme-semi-dark .main-menu-sidebar .shadow-bottom {
   width: 94%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(44%, #0f1642), color-stop(73%, rgba(15, 22, 66, 0.51)), to(rgba(44, 48, 60, 0)));
   background: linear-gradient(to bottom, #0f1642 44%, rgba(15, 22, 66, 0.51) 73%, rgba(44, 48, 60, 0) 100%);
 }
 
@@ -2914,16 +2957,21 @@ ol {
 
 .zoom-fade-enter-active,
 .zoom-fade-leave-active {
+  -webkit-transition: opacity .28s ease-in-out, -webkit-transform .35s;
+  transition: opacity .28s ease-in-out, -webkit-transform .35s;
   transition: transform .35s, opacity .28s ease-in-out;
+  transition: transform .35s, opacity .28s ease-in-out, -webkit-transform .35s;
 }
 
 .zoom-fade-enter {
-  transform: scale(0.97);
+  -webkit-transform: scale(0.97);
+          transform: scale(0.97);
   opacity: 0;
 }
 
 .zoom-fade-leave-to {
-  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
   opacity: 0;
 }
 
@@ -2931,6 +2979,7 @@ ol {
 
 .fade-enter-active,
 .fade-leave-active {
+  -webkit-transition: opacity .28s ease-in-out;
   transition: opacity .28s ease-in-out;
 }
 
@@ -2943,47 +2992,61 @@ ol {
 
 .slide-fade-enter-active,
 .slide-fade-leave-active {
+  -webkit-transition: opacity .35s, -webkit-transform .4s;
+  transition: opacity .35s, -webkit-transform .4s;
   transition: opacity .35s, transform .4s;
+  transition: opacity .35s, transform .4s, -webkit-transform .4s;
 }
 
 .slide-fade-enter {
   opacity: 0;
-  transform: translateX(-30%);
+  -webkit-transform: translateX(-30%);
+          transform: translateX(-30%);
 }
 
 .slide-fade-leave-to {
   opacity: 0;
-  transform: translateX(30%);
+  -webkit-transform: translateX(30%);
+          transform: translateX(30%);
 }
 
 /* ZOOM OUT */
 
 .zoom-out-enter-active,
 .zoom-out-leave-active {
+  -webkit-transition: opacity .35s ease-in-out, -webkit-transform .45s ease-out;
+  transition: opacity .35s ease-in-out, -webkit-transform .45s ease-out;
   transition: opacity .35s ease-in-out, transform .45s ease-out;
+  transition: opacity .35s ease-in-out, transform .45s ease-out, -webkit-transform .45s ease-out;
 }
 
 .zoom-out-enter,
 .zoom-out-leave-to {
   opacity: 0;
-  transform: scale(0);
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 /* UNFOLD SLIDE */
 
 .fade-bottom-enter-active,
 .fade-bottom-leave-active {
+  -webkit-transition: opacity .3s, -webkit-transform .35s;
+  transition: opacity .3s, -webkit-transform .35s;
   transition: opacity .3s, transform .35s;
+  transition: opacity .3s, transform .35s, -webkit-transform .35s;
 }
 
 .fade-bottom-enter {
   opacity: 0;
-  transform: translateY(-8%);
+  -webkit-transform: translateY(-8%);
+          transform: translateY(-8%);
 }
 
 .fade-bottom-leave-to {
   opacity: 0;
-  transform: translateY(8%);
+  -webkit-transform: translateY(8%);
+          transform: translateY(8%);
 }
 
 /*=========================================================================================
@@ -3002,16 +3065,19 @@ ol {
 .list-enter,
 .list-leave-to {
   opacity: 0;
-  transform: translateX(30px);
+  -webkit-transform: translateX(30px);
+          transform: translateX(30px);
 }
 
 .list-enter-up-leave-active {
+  -webkit-transition: none !important;
   transition: none !important;
 }
 
 .list-enter-up-enter {
   opacity: 0;
-  transform: translateY(30px);
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 
 /*=========================================================================================
@@ -3024,6 +3090,7 @@ ol {
 ==========================================================================================*/
 
 .vx-row {
+  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
   margin: 0 -1rem;
@@ -3034,6 +3101,7 @@ ol {
 }
 
 .vx-row.match-height > .vx-col {
+  display: -webkit-box;
   display: flex;
 }
 
@@ -3180,9 +3248,13 @@ ol {
 }
 
 .btn-group-vertical {
+  display: -webkit-inline-box;
   display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: start;
+          align-items: flex-start;
 }
 
 .btn-group-vertical button {
@@ -3290,15 +3362,18 @@ ul.bordered-items > li:not(:last-of-type):not([class*='shadow']) {
 }
 
 .user-list {
+  display: -webkit-box;
   display: flex;
 }
 
 .user-list .con-vs-avatar {
+  -webkit-transition: .3s;
   transition: .3s;
 }
 
 .user-list .con-vs-avatar:hover {
-  transform: translateY(-5px) scale(1.07);
+  -webkit-transform: translateY(-5px) scale(1.07);
+          transform: translateY(-5px) scale(1.07);
   box-shadow: 0 14px 24px rgba(62, 57, 107, 0.2);
   z-index: 999;
 }
@@ -3412,10 +3487,12 @@ ul.bordered-items > li:not(:last-of-type):not([class*='shadow']) {
 }
 
 .vs-collapse.shadow .vs-collapse-item--icon-header {
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
 .vs-collapse.shadow .open-item .vs-collapse-item--icon-header {
+  -webkit-transform: translate(-50%, -50%) rotate(180deg);
   transform: translate(-50%, -50%) rotate(180deg);
 }
 
@@ -3564,7 +3641,8 @@ ul.bordered-items > li:not(:last-of-type):not([class*='shadow']) {
 }
 
 .vs-checkbox-small .vs-checkbox--input:checked + .vs-checkbox .vs-icon {
-  transform: translateY(-3px);
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
 }
 
 .vs-col {
@@ -3661,10 +3739,12 @@ i.feather {
 
 .con-vs-checkbox,
 .con-vs-radio {
-  justify-content: flex-start !important;
+  -webkit-box-pack: start !important;
+          justify-content: flex-start !important;
 }
 
 .con-vs-radio {
+  display: -webkit-inline-box;
   display: inline-flex;
 }
 
